--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,13 @@
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
     "@angular/material": "13.3.2",
-    "@angular/material-moment-adapter": "^11.0.0",
+    "@angular/material-moment-adapter": "^13.3.3",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "material-design-icons": "^3.0.1",
-    "ngx-mask": "^11.1.3",
+    "moment": "^2.29.3",
+    "ngx-mask": "^13.1.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
