--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "jquery": "^3.6.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.3",
     "ngx-mask": "^13.1.9",
