--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "1.19.0",
     "consign": "0.1.6",
-    "cors": "2.8.5",
+    "cors": "^2.8.5",
     "express": "4.17.1",
     "jwt-simple": "0.5.6",
     "knex": "0.95.4",
